# pamiq-torch-modules

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml
src/pamiq_torch_modules/: __init__.py
src/pamiq_torch_modules/models/: __init__.py  fc_normal.py  multicategorical.py  one_hot.py  resnet.py  scalar_output.py  sioconv.py  utils.py
src/pamiq_torch_modules/models/jepa/: __init__.py  base.py  image.py
tests/: helpers.py  test_pamiq_torch_modules.py
tests/models/: test_fc_normal.py  test_multicategorical.py  test_one_hot.py  test_resnet.py  test_scalar_output.py  test_sioconv.py
tests/models/jepa/: helpers.py  test_base.py  test_image.py
